# kanji_recogniser

./: README.md  analysis.py  experiments_with_rust.py  get_fonts.sh  globals.py  kanji.txt  main.py  main_multiprocess.py  main_threaded.py  models.py  pipeline.py  rendering.py  training.py
rust/datagen/: Cargo.toml
rust/datagen/src/: lib.rs
