[package]
name = "datagen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datagen"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.14.1"
ndarray = "0.15.3"
glutin = "0.27.0"
femtovg = "0.2.8"
rand = "0.8.4"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
